2007-11-04  Mathias Hasselmann  <mathias@openismus.com>

	Implement regression tests for the EpcDispatcher.

	* Makefile.am, tests/.gitignore: Add regression tests.
	* tests/framework.c, tests/framework.h: Common test code.
	* tests/test-runner.sh: Redirect output of regression tests.
	* tests/test-dispatcher-simple-service.c: Test a single service.
	* tests/test-dispatcher-multiple-services.c: Test registering
	of multiple services on a single dispatcher.
	* tests/test-dispatcher-subtypes.c: Test service subtypes.
	* tests/test-dispatcher-local-collision.c: Test automatic handling
	of local service name collisions.
	* libepc/dispatcher.c, libepc/dispatcher.h:
	Add getter methods for properties of the EpcDispatcher.

2007-11-03  Mathias Hasselmann  <mathias@openismus.com>

	Implement regression testing for EpcDispatcher.

	* Makefile.am, tests/.gitignore: Add tests/test-dispatcher-001.c.
	* tests/test-dispatcher-001.c: Regression test for EpcDispatcher.

2007-11-03  Mathias Hasselmann  <mathias@openismus.com>

	Handle local collisions.

	* libepc/dispatcher.c: Handle local collisions.

2007-11-02  Mathias Hasselmann  <mathias@openismus.com>

	Fix property assertions in EpcPublisher.

	* libepc/publisher.c: Fix property assertions

2007-11-02  Mathias Hasselmann  <mathias@openismus.com>

	Guard g_debug statements by epc_debug flag, which can by enabled
	by setting the EPC_DEBUG environment variable.

	* libepc/dispatcher.c: Guard g_debug statements.

2007-11-02  Mathias Hasselmann  <mathias@openismus.com>

	Adjust indenting for consumer.h

	* libepc/consumer.h: Adjust indenting.

2007-11-02  Mathias Hasselmann  <mathias@openismus.com>

	Improve API documentation and examples.

	* libepc/consumer.c, libepc/dispatcher.c, libepc/publisher.c:
	Improve API documentation.
	* tests/test-consumer.c, tests/test-publisher.c: Insert code comments
	as those files serve as examples and document command line arguments.
	* docs/reference/libepc/libepc-sections.txt: